--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "13.4.19",
+    "next": "^16.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.15",
+    "@types/react": "19.2.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.15"
   }
 }
