--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.15",
+    "@types/node": "^24.9.1",
     "@types/react": "19.2.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.15"
+    "tailwindcss": "^4.1.15",
+    "typescript": "^5.9.3"
   }
 }
